@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST farsight2-0.0.14.tar.gz 1054752 RMD160 5f8816831fb6790c3185479cca43713fd552d4cd SHA1 2f8b382747efb467cdb9acd833bb88fe9bf02dc8 SHA256 88337ceb368ffb2afa46bd8166352ee594573d7580a936010a01be542d8d4a84
+DIST farsight2-0.0.15.tar.gz 1055749 RMD160 07669ad971096d31f6b192338982bc6888de2b10 SHA1 7edecfce0d3849ffceb6324a6ca63929338b4ccb SHA256 efc4aa28e0720f1c08f6179d40d436968a0a281a85b585bbb1694e5bd24f8ba3
 EBUILD farsight2-0.0.14.ebuild 1211 RMD160 5981144eb1cda739097147112ef4e13ae77ec087 SHA1 9508fbc14f4eea18cefc665921b3b2b5d7292e97 SHA256 3983b08d2508d198c0bfbd2fa20d75ead33883c963d130692be12891040d3352
-MISC ChangeLog 1382 RMD160 18a42a3fde01061c0ea45f031b60a2ff2cc9f919 SHA1 bd3464b53763bdf22b6acaff6244f8ec4b514379 SHA256 9c1d21877a1b39197514d54d35ab063f02bcd9bbb8031118c43cadc2559c82ee
+EBUILD farsight2-0.0.15.ebuild 1390 RMD160 53f4799979529099d72ef288ff12fe873f3e5ef0 SHA1 ea4f1488a6d113a7416befabc70c42bea5d3651e SHA256 c3cb0709c47479731ce177d776c0ec401e38ba84bc57ddc945032758e8ac1131
+MISC ChangeLog 1530 RMD160 49217c468faad0b447600c8e070e74f474d615e5 SHA1 72b50f64e4646f3a94ba80e622f7809a802f6397 SHA256 895bf44c8a1efeb6e4d3c94f68b8d335fecb8cbed2e6e6c582b9424589c4ad50
 MISC metadata.xml 438 RMD160 ea0c3d7720a5a5d5c685b14ec5b4b573bc9ef3bb SHA1 45d110470cb6a81833705c7064aebd10cf4753f5 SHA256 14c573ac5b400e2dec4c5ba811dc707afb2be482ce71f541e75880ce7b946953
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkqkm0kACgkQmOfEJZHYOKfSJwCgxIU7xOAglWNiuB83r7ChcKdK
+HLcAnRznuRDHr93uuh2CbyTzI2FNhXwB
+=d8BB
+-----END PGP SIGNATURE-----
